--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <section>
-        <h2>Cadastrar Notas 1º bimestre</h2>
+        <h2>Cadastrar Notas</h2>
           <form action="">
             <label>
               Nome: <input type="text" name="nometxt" id="input_nome" required>
@@ -27,7 +27,7 @@
               Prova 1º bimestre: <input type="number" name="prova1txt" id="input_prova_1" required>
             </label>
             <label>
-              rova integrada 1º bimestre <input type="number" name="integrada1txt" id="input_prova_integrada_1" required>
+              Prova integrada 1º bimestre <input type="number" name="integrada1txt" id="input_prova_integrada_1" required>
             </label>
             <label>
               AEP 1º bimestre: <input type="number" name="aep1txt" id="input_aep_1" required>
