--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <section id="section1">
         <h2>Cadastrar Notas</h2>
-          <form >
+          <form onsubmit="return adicionaDadosAlunos()">
             <label>
               Nome: <input type="text" name="nometxt" id="input_nome" placeholder="............................" required>
             </label>
