--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <td>Média 1ºbim</td>
                 <td>Média 2ºbim</td>
                 <td>Média total</td>
+                <td>Situação</td>
                 <td colspan="2">Ações</td>
             </tr>
         </table>
@@ -74,31 +75,28 @@
                       Nome: <input type="text" name="nometxt" id="input_nome_edit" placeholder="............................" required>
                   </label>
                   <label>
-                      Prova 1º bimestre: <input type="number" name="prova1txt" id="input_prova_1_edit" placeholder="............................" required min="0" max="8">
+                      Prova 1º bimestre: <input type="number" name="prova1txt" id="input_prova_1_edit" placeholder="............................" required min="0" max="8" step="0.01">
                   </label>
                   <label>
-                      AEP 1º bimestre: <input type="number" name="aep1txt" id="input_aep_1_edit" placeholder="............................" required min="0" max="1">
+                      AEP 1º bimestre: <input type="number" name="aep1txt" id="input_aep_1_edit" placeholder="............................" required min="0" max="1" step="0.01">
                   </label>
                   <label>
-                      Prova integrada 1º bimestre: <input type="number" name="integrada1txt" id="input_prova_integrada_1_edit" placeholder="............................" required min="0" max="1">
+                      Prova integrada 1º bimestre: <input type="number" name="integrada1txt" id="input_prova_integrada_1_edit" placeholder="............................" required min="0" max="1" step="0.01">
                   </label>
                   <label>
-                      Prova 2º bimestre: <input type="number" name="prova2txt" id="input_prova_2_edit" placeholder="............................" required min="0" max="8">
+                      Prova 2º bimestre: <input type="number" name="prova2txt" id="input_prova_2_edit" placeholder="............................" required min="0" max="8" step="0.01">
                   </label>
                   <label>
-                      AEP 2º bimestre: <input type="number" name="aep2txt" id="input_aep_2_edit" placeholder="............................" required min="0" max="1">
+                      AEP 2º bimestre: <input type="number" name="aep2txt" id="input_aep_2_edit" placeholder="............................" required min="0" max="1" step="0.01">
                   </label>
                   <label>
-                      Prova integrada 2º bimestre: <input type="number" name="integrada2txt" id="input_prova_integrada_2_edit" placeholder="............................" required min="0" max="1">
+                      Prova integrada 2º bimestre: <input type="number" name="integrada2txt" id="input_prova_integrada_2_edit" placeholder="............................" required min="0" max="1" step="0.01">
                   </label>
                   <button type="submit">Salvar Alterações</button>
               </form>
           </div>
       </section>
     </main>
-    <footer id="rodape">
-      <p>Situação do aluno:</p>
-    </footer>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
